# SLD

./: .gitignore  README.md  RESULTS.md  SLD_SPEC.md  pyproject.toml
bench/: common.py  convergent.py  convergent_deep.py  draft_quality.py  experiment.py  incontext.py  parcae_cpu.py  parcae_generate.py  parcae_lambada.py  parcae_nl.py  parcae_sld.py  plot.py  profile_decode.py  run_all.sh  summarize.py  sweep_cos.py  trace_convergence.py
notebooks/: README.md  build_notebook.py  sld_parcae_gpu.ipynb
results/: convergent.json  convergent_deep.json  draft_quality.json  frontier_main.json  incontext.json  parcae_cpu.json  parcae_lambada.json  parcae_nl.json  parcae_sld.json
sld/: __init__.py  draft.py  specloop.py  substrate.py  training.py
tests/: test_specloop.py
